# gameserver

./: .env.example  README.md  manage.py  pyproject.toml  requirements.txt
apis/: serializers.py  tests.py  urls.py  views.py
apps/: admin.py  forms.py  models.py  question.py  seed_api.py  tests.py  urls.py  utils.py  views.py
apps/management/commands/: generatequestion.py
apps/migrations/: 0001_initial.py  0002_remove_questionmodel_question_property_id.py  0003_gamemode.py  0004_remove_gamemode_answer_mode_and_more.py  0005_gamemode_allow_answer_mode_and_more.py  0006_questioncategory_questionmodel_difficulty_level.py  0007_questionmodel_category.py  0008_create_blank_category.py  0009_questioncategory_description.py  0010_usercategoryweight.py  0011_create_user_category_weight.py  0012_imagecustomquestion_textcustomquestion.py  0013_remove_imagecustomquestion_user_and_more.py  0014_imagecustomquestion_difficulty_level_and_more.py  0015_game_gamequestion_questionhistory.py  0016_alter_gamequestion_question.py  0017_alter_questionhistory_question.py  0018_gamequestion_selected.py  0019_game_rank_after_game_rank_before.py  0020_gamequestion_duration.py  0021_gamemode_active_imagecustomquestion_active_and_more.py
gemusaba/: asgi.py  info.py  settings.py  urls.py  wsgi.py
static/css/: index.css
templates/apps/: base.html  leaderboard.html  play_history.html  question_generator_test.html  user_profile.html
templates/apps/category/: create.html  edit.html  list.html
templates/apps/game_mode/: create.html  edit.html  list.html
templates/apps/image_custom_question/: create.html  edit.html  list.html  view.html
templates/apps/question/: create.html  edit.html  list.html
templates/users/: base.html
users/: forms.py  models.py  signals.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+9 files in other folders)
